# ElkOpticsAnalyzer

./: .gitignore  .pre-commit-config.yaml  BatchLoad.ui  ElkOpticsAnalyzer.py  LICENSE-3RD-PARTY  MainWindow.ui  README.md  TensorElements.ui  UiInterface.py  Utilities.py  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  setup.cfg  setup.py
elkoa/: __init__.py
elkoa/gui/: BatchLoad.ui  Convert.ui  ElkOpticsAnalyzer.py  FrameLayout.py  MainWindow.ui  ManipulateField.ui  SaveTab.ui  TensorElements.ui  UiDesigner.py  UiDialogs.py  UiInterface.py  UiMainWindow.py  Unit.ui  resources_rc.py
elkoa/utils/: __init__.py  convert.py  decorators.py  dicts.py  elk.py  io.py  misc.py  plot.py
test/: Dockerfile  test_mainWindow.py
