[metadata]
name = elkoa
author = René Wirnata
author_email = rene.wirnata@pandascience.net

summary = plot and analyze Elk optics output data
description-file = README.rst
# not yet working b/c of github.com/pypa/setuptools/pull/1343:w
# description-content-type = text/markdown
home-page = https://github.com/PandaScience/ElkOpticsAnalyzer
license = GPLv3+

python-requires = >=3

keywords = elk ab-initio simulation postprocessing optics analyze physics

classifier =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.1
	Programming Language :: Python :: 3.2
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering :: Physics

[files]
packages = elkoa

[entry_points]
console_scripts =
	elkoa = elkoa.gui.ElkOpticsAnalyzer:main
	ElkOpticsAnalyzer = elkoa.gui.ElkOpticsAnalyzer:main
