[metadata]
name = elkoa
author = René Wirnata
author_email = rene.wirnata@pandascience.net

summary = plot and analyze Elk optics output data
description-file = README.rst
# not yet working b/c of github.com/pypa/setuptools/pull/1343:w
# description-content-type = text/markdown
home-page = https://github.com/PandaScience/ElkOpticsAnalyzer
license = GPLv3+

python-requires = >=3

keywords = elk ab-initio simulation postprocessing optics analyze physics

classifier =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only 
	Environment :: Console
	Environment :: X11 Applications :: Qt
	Intended Audience :: Education
	Intended Audience :: Science/Research 
	Natural Language :: English
	Operating System :: OS Independent
	Topic :: Scientific/Engineering :: Physics

[files]
packages = elkoa

[entry_points]
console_scripts =
	elkoa = elkoa.gui.ElkOpticsAnalyzer:main
	ElkOpticsAnalyzer = elkoa.gui.ElkOpticsAnalyzer:main


[flake8]
ignore = E226, W503
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git,.hg,build,dist,Designer_*,UiDesigner.py
